[gd_scene load_steps=15 format=3 uid="uid://c2eky42dvaq1w"]

[ext_resource type="Script" uid="uid://dcur6e72oq2as" path="res://scripts/control.gd" id="1_7x0rv"]
[ext_resource type="Texture2D" uid="uid://buhhishxwgt41" path="res://assets/images/bg-fundo.png" id="2_hf8s8"]
[ext_resource type="Texture2D" uid="uid://chjxk3md6blgv" path="res://assets/images/bg-direita.png" id="3_6htpv"]
[ext_resource type="Texture2D" uid="uid://c1v35c6y7cutr" path="res://assets/images/bg-esquerda.png" id="4_4y3de"]
[ext_resource type="Texture2D" uid="uid://cvt8yibiisfrd" path="res://assets/images/game_logo2.png" id="5_5r0n6"]
[ext_resource type="FontFile" uid="uid://b5hcl4o47gq51" path="res://assets/fonts/PixelOperatorHB.ttf" id="6_ixg1r"]
[ext_resource type="Script" uid="uid://oirb7eciajh7" path="res://scripts/jogar_btn.gd" id="7_kbnhp"]
[ext_resource type="Texture2D" uid="uid://o0u3rsbeogec" path="res://assets/images/hover-image.png" id="8_pex5u"]

[sub_resource type="Animation" id="Animation_fj5cn"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BgDireita:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.13),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BgEsquerda:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.93333334, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6666667, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kbped"]
resource_name = "move_bg"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BgDireita:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BgEsquerda:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iy58a"]
_data = {
&"RESET": SubResource("Animation_fj5cn"),
&"move_bg": SubResource("Animation_kbped")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hf8s8"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6htpv"]
color = Color(0.5686275, 0.77254903, 0.98039216, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4y3de"]
color = Color(0.4096245, 0.68835217, 0.962766, 1)
thickness = 6

[node name="MenuFISH" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7x0rv")

[node name="bg" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hf8s8")
expand_mode = 2

[node name="BgDireita" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(557.5396, 347.8306)
scale = Vector2(0.6724371, 0.6496863)
texture = ExtResource("3_6htpv")

[node name="BgEsquerda" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(594.56946, 347.67)
scale = Vector2(0.61919844, 0.65494436)
texture = ExtResource("4_4y3de")

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 700.0
offset_bottom = 700.00085
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.2)
pivot_offset = Vector2(0, 4)
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 1
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 1

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/MainButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("5_5r0n6")

[node name="jogar_btn" type="Button" parent="MarginContainer/HBoxContainer/MainButtons"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "JOGAR"
flat = true
script = ExtResource("7_kbnhp")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainButtons/jogar_btn"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="HoverImage" type="TextureRect" parent="MarginContainer/HBoxContainer/MainButtons/jogar_btn"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.902
offset_top = -524.5
offset_right = 145.09802
offset_bottom = -424.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pex5u")
stretch_mode = 2

[node name="config_btn" type="Button" parent="MarginContainer/HBoxContainer/MainButtons"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "CONFIGURAÇÕES"
flat = true
script = ExtResource("7_kbnhp")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainButtons/config_btn"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="HoverImage" type="TextureRect" parent="MarginContainer/HBoxContainer/MainButtons/config_btn"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.902
offset_top = -524.5
offset_right = 145.09802
offset_bottom = -424.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pex5u")
stretch_mode = 2

[node name="credit_btn" type="Button" parent="MarginContainer/HBoxContainer/MainButtons"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "CRÉDITOS"
flat = true
script = ExtResource("7_kbnhp")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainButtons/credit_btn"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="HoverImage" type="TextureRect" parent="MarginContainer/HBoxContainer/MainButtons/credit_btn"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.902
offset_top = -524.5
offset_right = 145.09802
offset_bottom = -424.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pex5u")
stretch_mode = 2

[node name="sair_btn" type="Button" parent="MarginContainer/HBoxContainer/MainButtons"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "SAIR DO JOGO"
flat = true
script = ExtResource("7_kbnhp")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainButtons/sair_btn"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="HoverImage" type="TextureRect" parent="MarginContainer/HBoxContainer/MainButtons/sair_btn"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.902
offset_top = -524.5
offset_right = 145.09802
offset_bottom = -424.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pex5u")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iy58a")
}
autoplay = "RESET"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.78200006
anchor_right = 0.5
anchor_bottom = 0.78200006
offset_left = -251.0
offset_top = -167.73605
offset_right = 259.0
offset_bottom = 121.26395
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "CONFIGURAÇÕES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sair_config" type="Button" parent="Options"]
z_index = 1
layout_mode = 0
offset_left = 140.0
offset_top = 221.0
offset_right = 363.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 40
text = "VOLTAR"
flat = true
script = ExtResource("7_kbnhp")

[node name="Label" type="Label" parent="Options/sair_config"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0

[node name="HoverImage" type="TextureRect" parent="Options/sair_config"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.902
offset_top = -524.5
offset_right = 145.09802
offset_bottom = -424.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pex5u")
stretch_mode = 2

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 89.0
offset_top = 62.0
offset_right = 431.0
offset_bottom = 94.0
theme_override_styles/slider = SubResource("StyleBoxLine_hf8s8")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_6htpv")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_4y3de")
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullScreenControl" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 87.0
offset_top = 120.0
offset_right = 443.0
offset_bottom = 144.0
theme_override_fonts/font = ExtResource("6_ixg1r")
theme_override_font_sizes/font_size = 22
text = "MODO TELA CHEIA"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtons/jogar_btn" to="." method="_on_jogar_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtons/config_btn" to="." method="_on_config_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtons/credit_btn" to="." method="_on_credit_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtons/sair_btn" to="." method="_on_sair_btn_pressed"]
[connection signal="pressed" from="Options/sair_config" to="." method="_on_sair_config_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullScreenControl" to="Options/FullScreenControl" method="_on_toggled"]
